--- a/Lesson_Ten/pom.xml
+++ b/Lesson_Ten/pom.xml
@@ -47,7 +47,11 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.9.2</version>
         </dependency>
-</dependencies>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
